test/typecheck/bad-return-type-mismatch.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func (result i32)
    f32.const 0
    return))
(;; STDERR ;;;
out/test/typecheck/bad-return-type-mismatch.txt:6:5: error: type mismatch in return, expected [i32] but got [f32]
    return))
    ^^^^^^
;;; STDERR ;;)
